--- a/rapid-note/src/components/Notes.css
+++ b/rapid-note/src/components/Notes.css
@@ -94,6 +94,7 @@
     color: #15181a;
     margin-top: 2vmin;
     margin-left: 1vmin;
+    padding: 10px 10px 4vmin 10px;
   }
   h5 {
     display: flex;
@@ -118,7 +119,6 @@
     color: #15181a;
     margin-top: -4vmin;
   }
-  
 
   .contentBtnClose {
     margin-left: 15em;
@@ -150,29 +150,39 @@
     border-radius: 5px;
     border: none;
   }
-  .btnLoad {
+  button.btnLoad {
     background-color: white;
-    margin-top: 1vmin;
-    margin-left: 22vmin;
+    margin-top: 3vmin;
     border: none;
     border-radius: 15px;
     font-family: "Sanchez";
-    font-size: calc(22px + 3vmin);
+    font-size: 1em;
     color: #15181a;
-    padding: 10px 10px 10px 10px;
+    border-color: #818283;
+    padding: 5px 5px 5px 5px;
   }
   .editTitleLoad{
-    width: 75vmin;
-    margin-left: 1vmin;
+    width: 65vmin;
+    margin-left: 0vmin;
     margin-top: -5vmin;
+    border-radius: 15px;
+    font-size: 1em;
+    text-align: center;
+    border-color: #818283;
+    color: #15181a;
+    background-color: rgb(247, 247, 156);
   }
   .editDescriptionLoad {
     margin-top: 0vmin;
     width: 80vmin;
     border-radius: 15px;
     margin-left: 1vmin;
+    text-align: center;
     font-family: "Sanchez";
-    font-size: calc(22px + 2vmin);
+    font-size: 1em;
+    border-color: #818283;
     color: #15181a;
+    margin-top: 1.5vmin;
+    background-color: rgb(247, 247, 156);
   }
 }
