--- a/rapid-note/src/components/Login.css
+++ b/rapid-note/src/components/Login.css
@@ -1,19 +1,18 @@
-@media only screen and (min-device-width: 810px) {
+@media only screen and (min-device-width: 365px) {
   .App {
     text-align: center;
   }
   .Logotext-login {
-    width: 75vmin;
-    height: 25vmin;
-    margin-right: 0vmin;
-    margin-top: -10vmin;
+    width: 14em;
+    margin-left: 0.4em;
+    margin-top: 0em;
   }
   .Form-login {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    margin-right: 0vmin;
+    margin-left: 3vmin;
     margin-top: 1vmin;
   }
   .Content-btn-login {
@@ -21,38 +20,39 @@
     flex-direction: column;
     align-content: center;
     align-items: center;
-    margin-left: 7vmin;
+    margin-left: 0em;
   }
   .BtnLogin {
-    height: 12vmin;
-    width: 42vmin;
+    height: 1.5em;
+    width: 8em;
     font-family: "Sanchez";
     font-size: calc(16px + 3vmin);
     background-color: white;
-    border-radius: 20px;
+    border-radius: 10px;
     border: none;
     cursor: pointer;
     color: black;
     margin: 4vmin;
   }
   .Content-btn-google{
-    margin-left: -5vmin;
+    margin-left: 0.5em;
+    width: 0em;
   }
   .LogoGoogle {
-    height: 9vmin;
-    width: 38vmin;
-    margin-top: 1vmin;
-    margin-left: 1vmin;
+    height: 1.8em;
+    width: 8.5em;
+    margin-top: 0vmin;
+    margin-left: 0vmin;
   }
   .BtnGoogle {
-    height: 12vmin;
-    width: 42vmin;
+    height: 2em;
+    width: 9em;
     font-family: "Sanchez";
-    font-size: calc(16px + 2vmin);
+    font-size: 24px;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 10px;
     border: none;
-    margin-left: 16vmin;
+    margin-left: 3em;
     cursor: pointer;
     color: black;
   }
@@ -60,11 +60,18 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    font-size: calc(17px + 3vmin);
+    font-size: 24px;
     color: black;
     padding: 4vmin 0vmin 0vmin 0vmin;
-    margin-left: 14vmin;
   }
+  p {
+    display: block;
+    color: red;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-top: 0.5em;
+
+}
 }
 
 @media only screen and (min-device-width: 1180px) {
