--- a/rapid-note/src/components/Header.css
+++ b/rapid-note/src/components/Header.css
@@ -1,4 +1,4 @@
-@media only screen and (min-device-width: 810px) {
+@media only screen and (min-width: 365px) {
 
   .Container-HeaderRapidNote {
     background-color: white;
@@ -9,26 +9,26 @@
     background-color: white;
   }
   .LogoHeader {
-    width: 100vw;
-    height: 14vh;
+    width: 110vw;
+    height: 15vh;
     margin-top: 1vmin;
-    margin-left: 3.5vmin;
+    margin-left: -1.5em;
   }
   h3 {
-    margin-left: 11vmin;
+    margin-left: -5em;
     margin-top: 0vmin;
     font-family: 'apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;';
-    font-size: calc(16px + 2vmin);
+    font-size: 20px;
   }
   .Content-BtnLogOut {
-    margin-top: -8vmin;
-    margin-left: 60vmin;
+    margin-top: -6vmin;
+    margin-left: 7em;
   }
   .BtnLogOut{
   height: 1vmin;
   width: 50vmin;
   font-family: 'apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;';
-  font-size: calc(16px + 2vmin);
+  font-size: 20px;
   background-color: white;
   border-radius: 20px;
   border: none;
