--- a/rapid-note/src/components/Home.css
+++ b/rapid-note/src/components/Home.css
@@ -2,20 +2,21 @@
 @media only screen and (min-width: 365px) {
   * {
     text-align: center;
+    margin: 0 auto;
+    box-sizing: border-box;
     width: 100%;
   }
   .App-logotext {
-    width: 8em;
-    margin-left: -0.2em;
-    margin-top: -22em;
+    width: 20em;
+    margin-left: 1.3em;
+    margin-top: -12em;
   }
   .App-logo {
-    margin-left: 1em;
-    width: 5em;
+    margin-left: 5em;
+    width: 12em;
     animation: App-logo-spin infinite 2s linear;
     margin-top: -1em;
   }
-
   .Title-home {
     font-family: "Sanchez";
     font-size: 19px;
