--- a/rapid-note/src/components/Login.css
+++ b/rapid-note/src/components/Login.css
@@ -1,6 +1,7 @@
 @media only screen and (min-device-width: 365px) {
-  .App {
+  * {
     text-align: center;
+    width: 100%;
   }
   .Logotext-login {
     width: 14em;
