--- a/rapid-note/src/components/Register.css
+++ b/rapid-note/src/components/Register.css
@@ -87,19 +87,18 @@
   }
 }
 /*For tablet horizontal*/
-@media only screen and (min-width: 670px) {
+@media only screen and (min-width: 650px) {
   .Logotext-register {
     margin-left: 0em;
-    height: 5em;
-    width: 28em;
+    height: 6em;
+    width: 29em;
     margin-top: -2em;
   }
   .Title-register {
     font-family: "Sanchez";
-    font-size: calc(40px + 2vmin);
+    font-size: 24px;
     margin-top: 0vmin;
   }
-  
   .Form-register {
     display: flex;
     flex-direction: column;
