--- a/rapid-note/src/components/Header.css
+++ b/rapid-note/src/components/Header.css
@@ -2,7 +2,7 @@
 
   .Container-HeaderRapidNote {
     background-color: white;
-    width: 100vw;
+    width: 100%;
     height: 11vh;
   }
   .Content-HeaderInfo {
@@ -35,5 +35,15 @@
   cursor: pointer;
   color: blue;
   padding: 0px 0px 0px 0px;
+  }
+}
+/*For tablet horizontal*/
+@media only screen and (min-width: 650px) {
+
+  .LogoHeader {
+    width: 100vw;
+    height: 25vh;
+    margin-top: 1.5vmin;
+    margin-left: -1em;
   }
 }
