--- a/rapid-note/src/components/Home.css
+++ b/rapid-note/src/components/Home.css
@@ -37,7 +37,7 @@
   .Content-btn {
     background-color: #92daee;
     margin-top: -13em;
-    align-items: center;
+    margin-left: 7em;
     width: 9em;
   }
   .Btn-home {
