--- a/rapid-note/src/components/Home.css
+++ b/rapid-note/src/components/Home.css
@@ -68,11 +68,18 @@
 }
 /*For mobile horizontal*/
 @media only screen and (min-width: 650px) {
+  * {
+    margin: 0 auto;
+    box-sizing: border-box;
+    width: 100%;
+  }
+
   .App-logotext {
-    margin-left:1.7em;
-    height: 5em;
-    width: 25em;
-    margin-top: -40vmin;
+    margin-left:1.1em;
+    height: 3.5em;
+    width: 90%;
+    align-items: center;
+    margin-top: -30vmin;
   }
   .Title-home {
     font-size: 24px;
