--- a/rapid-note/src/components/Home.css
+++ b/rapid-note/src/components/Home.css
@@ -24,6 +24,7 @@
     margin-left: 0em;
     padding: 0px;
     text-align: center;
+    margin-top: 2.5em;
   }
   .Content-home {
     background-color: #92daee;
@@ -51,18 +52,27 @@
     cursor: pointer;
     color: black;
   }
+  .styleLine {
+    font-family: "Sanchez";
+    font-size: 19px;
+  }
   .Content-link {
+    font-family: "Sanchez";
+    font-size: 14px;
     margin-top: 8vmin;
     background-color: #92daee;
     text-align: center;
     width: 20em;
+    margin-top: -1em;
+    padding: 40px 0px 0px 0px;
   }
   .Link-home {
     display: flex;
     flex-direction: column;
     text-align: center;
     font-size: 20px;
-    color: black;
+    color: blue;
+    margin-top: -1em;
     padding: 2vmin 2vmin 2vmin 2vmin;
   }
 }
@@ -73,13 +83,12 @@
     box-sizing: border-box;
     width: 100%;
   }
-
   .App-logotext {
     margin-left:1.1em;
-    height: 3.5em;
+    height: 5em;
     width: 90%;
     align-items: center;
-    margin-top: -30vmin;
+    margin-top: -9em;
   }
   .Title-home {
     font-size: 24px;
@@ -102,7 +111,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    font-size: 23px;
+    font-size: 19px;
     color: #15181a;
   }
   .Content-btn {
@@ -121,19 +130,22 @@
     margin-left: 3em;
     cursor: pointer;
     color: black;
-
+  }
+  .styleLine {
+    margin-left: 0em;
   }
   .Content-link {
     margin-top: 1vmin;
     background-color: #92daee;
-    margin-left: 14.5em;
+    margin-left: 18em;
+    margin-top: -1em;
   }
   .Link-home {
     display: flex;
     flex-direction: column;
     text-align: center;
     font-size:24px;
-    color: black;
+    color: blue;
     padding: 2vmin 2vmin 2vmin 2vmin;
   }
 }
