--- a/rapid-note/src/components/Header.css
+++ b/rapid-note/src/components/Header.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 365px) {
+@media only screen and (min-width: 350px) {
 
   .Container-HeaderRapidNote {
     background-color: white;
@@ -12,7 +12,7 @@
     width: 110vw;
     height: 15vh;
     margin-top: 1vmin;
-    margin-left: -1.5em;
+    align-items: center;
   }
   .Welcome {
     margin-left: -5em;
