--- a/rapid-note/src/components/Login.css
+++ b/rapid-note/src/components/Login.css
@@ -1,4 +1,4 @@
-@media only screen and (min-device-width: 365px) {
+
   * {
     text-align: center;
     width: 100%;
@@ -71,9 +71,8 @@
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-top: 0.5em;
+}
 
-}
-}
 /*Vista horizontal mobile*/
 @media only screen and (min-device-width: 650px) {
   .Logotext-login {
@@ -95,30 +94,30 @@
     flex-direction: column;
     align-content: center;
     align-items: center;
-    margin-left: -1em;
+    margin-left: -2em;
     margin-top: -2vmin;
   }
   .BtnLogin {
     height: 2em;
     width: 8em;
-    font-family: "Sanchez";
-    font-size: 24px;
+    font-family: "Sans-serif";
+    font-size: 23px;
     background-color: white;
     border-radius: 10px;
     border: none;
     cursor: pointer;
-    color: black;
+    color: #6A6F6A;
     margin: 4vmin;
   }
   .Content-btn-google{
-    margin-left: -2em;
+    margin-left: 3em;
     margin-top: -17vmin;
   }
   .LogoGoogle {
     height: 11vmin;
     width: 48vmin;
     margin-top: 1vmin;
-    margin-left: -1vmin;
+    margin-left: 0vmin;
   }
   .BtnGoogle {
     height: 13vmin;
@@ -134,11 +133,11 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    font-size: calc(17px + 3vmin);
+    font-size: 24px;
     color: black;
     padding: 4vmin 0vmin 0vmin 0vmin;
-    margin-left: 0em;
-    margin-top: -2vmin;
+    margin-left: 1em;
+    margin-top: 0vmin;
     color: blue;
   }
 }
