--- a/rapid-note/src/components/Notes.css
+++ b/rapid-note/src/components/Notes.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 365px) {
+
   .Container-note-form {
     width: 100vw;
     display: flex;
@@ -120,7 +120,6 @@
     color: #15181a;
     margin-top: -4vmin;
   }
-
   .contentBtnClose {
     margin-left: 12em;
     margin-top: -9vmin;
@@ -128,7 +127,7 @@
     border: none;
   }
   .closeNote {
-    width: 9vmin;
+    width: 7vmin;
     height: 7vmin;
     background-color: rgb(247, 247, 156);
     border: none;
@@ -136,6 +135,7 @@
   }
   .btnClose {
     border: none;
+    width: 1em;
     background-color: rgb(247, 247, 156);
   }
   .contentBtnEdit {
@@ -186,9 +186,9 @@
     margin-top: 3vmin;
     background-color: rgb(247, 247, 156);
   }
-}
+
 /*Mobile horizontal*/
-@media only screen and (min-width: 650px) {
+@media only screen and (min-width: 600px) {
   .catNote {
     display: none;
   }
@@ -231,10 +231,11 @@
     margin-left: 0.7em;
 }
 .contentBtnClose {
-  margin-left: 17em;
+  margin-left: 19.5em;
 }
 .contentBtnEdit {
-  margin-right: 21.5em;
+  margin-left: -2.2em;
+  width: 2em;
 }
 .editTitleLoad {
   width: 20em;
