--- a/rapid-note/src/components/Register.css
+++ b/rapid-note/src/components/Register.css
@@ -87,7 +87,7 @@
   }
 }
 /*For tablet horizontal*/
-@media only screen and (min-width: 650px) {
+@media (min-width: 600px) and (max-width: 1199px) {
   .Logotext-register {
     margin-left: 0em;
     height: 6em;
