--- a/rapid-note/src/components/Home.css
+++ b/rapid-note/src/components/Home.css
@@ -1,33 +1,30 @@
 /*For mobile*/
-/*@media only screen and (min-width: 350px) {*/
+
   * {
-    text-align: center;
     margin: 0 auto;
     box-sizing: border-box;
     width: 100%;
+    background-color: #92daee;
   }
   .App-logotext {
-    width: 20em;
-    margin-left: 1.3em;
-    margin-top: -12em;
+    width: 100%;
+    align-items: center;
+    margin-top: -20em;
   }
   .App-logo {
-    margin-left: 5em;
-    width: 12em;
+    margin-left: 3em;
+    width: 70%;
     animation: App-logo-spin infinite 2s linear;
     margin-top: -1em;
   }
   .Title-home {
     font-family: "Sanchez";
     font-size: 18px;
-    margin-top: 4vmin;
-    margin-left: 0em;
     padding: 0px;
     text-align: center;
-    margin-top: 2.5em;
+    margin-top: 3em;
   }
   .Content-home {
-    background-color: #92daee;
     height: 100vh;
     width: 100%;
     display: flex;
@@ -36,13 +33,15 @@
     justify-content: center;
   }
   .Content-btn {
-    background-color: #92daee;
-    margin-top: -13em;
-    margin-left: 6.6em;
-    width: 9em;
+    display: flex;
+    margin-top: -12em;
+    align-items: center;
+    width: 12em;
   }
   .Btn-home {
-    height: 12vmin;
+    display: flex;
+    text-align: center;
+    height: auto;
     width: 8em;
     font-family: "Sanchez";
     font-size: 20px;
@@ -55,12 +54,12 @@
   .styleLine {
     font-family: "Sanchez";
     font-size: 19px;
+    margin-top: 0em;
   }
   .Content-link {
     font-family: "Sanchez";
     font-size: 14px;
     margin-top: 8vmin;
-    background-color: #92daee;
     text-align: center;
     width: 20em;
     margin-top: -1em;
@@ -72,148 +71,111 @@
     text-align: center;
     font-size: 20px;
     color: blue;
-    margin-top: 0em;
     padding: 2vmin 2vmin 2vmin 2vmin;
   }
-/*}*/
-/*For mobile horizontal*/
-@media only screen and (min-width: 600px) {
-  * {
-    margin: 0 auto;
-    box-sizing: border-box;
-    width: 100%;
+
+/*For tablet*/
+@media (min-width: 600px) and (max-width: 1199px) {
+  .Container-home {
+    background-color: #92daee;
   }
+
   .App-logotext {
-    margin-left:1.1em;
-    height: 5em;
-    width: 90%;
-    align-items: center;
-    margin-top: -9em;
+    width: 80%;
+    margin-top: -20em;
   }
   .Title-home {
-    font-size: 24px;
-    color: #15181a;
-    padding: 0px 0px 0px 0px;
-    text-align: center;
-    margin-top: -55vmin;
+    margin-top: 1em;
+    font-size: 38px;
+
   }
   .App-logo {
+    width: 50%;
+    margin-top: -2em;
+    margin-left: 12em;
     animation: App-logo-spin infinite 2s linear;
-    margin-top: -0vmin;
-    width: 55vmin;
-    margin-left: 4em;
-  }
-  .Content-home {
-    background-color: #92daee;
-    min-height: 100vh;
-    min-width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    font-size: 19px;
-    color: #15181a;
   }
   .Content-btn {
-    background-color: #92daee;
-    margin-top: -10em;
-    margin-left: 13em;
+  align-items: center;
+  margin-top: -20em;
+  /*margin-left: 15em;*/
   }
   .Btn-home {
-    height: 1.5em;
-    width: 8em;
-    font-family: "Sanchez";
-    font-size: 26px;
     background-color: white;
-    border-radius: 10px;
-    border: none;
-    margin-left: 3em;
-    cursor: pointer;
-    color: black;
+    font-size: 36px;
+    margin-top: 0.5em;
+    width: 9em;
+    text-align: center;
   }
   .styleLine {
-    margin-left: 0em;
+  margin-top: 2.5em;
+  font-size: 36px;
+  text-align: center;
   }
   .Content-link {
-    margin-top: 1vmin;
-    background-color: #92daee;
-    margin-left: 18em;
-    margin-top: -1em;
+  font-size: 36px;
+  margin-top: -2em;
+  padding: 0em 0em 2em 0em;
   }
   .Link-home {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    font-size:24px;
-    color: blue;
-    padding: 2vmin 2vmin 2vmin 2vmin;
+  font-size: 36px;
   }
 }
 
 /*For Desktop*/
 @media only screen and (min-width: 1200px) {
   .App-logotext {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    margin-right: 100vmin;
-    height: 26vmin;
-    width: 100vmin;
-    margin-top: -35vmin;
+    align-items: center;
+    height: 6em;
+    width: 60%;
+    margin-top: -10em;
   }
   .Title-home {
-    font-size: calc(18px + 2vmin);
-    color: #15181a;
+    font-size: 32px;
     padding: 0px 0px 0px 0px;
-    margin-left: -75vmin;
-    margin-top: -40vmin;
+    margin-left: -7em;
+    margin-top: -9em;
   }
   .App-logo {
     animation: App-logo-spin infinite 2s linear;
-    margin-top: -8vmin;
-    width: 55vmin;
-    margin-left: 90vmin;
+    margin-top: -4vmin;
+    width: 25%;
+    margin-left: 28em;
   }
   .Content-home {
-    background-color: #92daee;
-    min-height: 100vh;
-    min-width: 100vw;
-    display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: calc(15px + 2vmin);
+    font-size: 30px;
     color: #15181a;
   }
   .Content-btn {
-    background-color: #92daee;
-    margin-top: -40vmin;
-    margin-left: 40vmin;
+    align-items: center;
+    margin-top: -18em;
+    margin-left: 21em;
+    width: 13.5em;
   }
   .Btn-home {
-    height: 11vmin;
-    width: 37vmin;
-    font-family: "Sanchez";
-    font-size: calc(20px + 2vmin);
-    background-color: white;
-    border-radius: 20px;
-    border: none;
-    cursor: pointer;
-    color: black;
+    height: 8vmin;
+    align-items: center;
+    width: 14em;
+    font-size: 30px;
+    border-radius: 10px;
   }
+  .styleLine {
+    width: 14em;
+    font-size: 30px;
+    margin-left: -7.2em;
+    margin-top: -1em;
+    }
   .Content-link {
     margin-top: 2vmin;
-    background-color: #92daee;
-    margin-right: 100vmin;
+    margin-right: 45.5em;
   }
   .Link-home {
-    display: flex;
-    flex-direction: column;
+    margin-top: -1em;
     text-align: center;
-    font-size: calc(20px + 2vmin);
-    color: black;
-    padding: 2vmin 2vmin 2vmin 2vmin;
+    font-size: 30px;
+    margin-left: -5em;
   }
 }
 
