--- a/rapid-note/src/components/Login.css
+++ b/rapid-note/src/components/Login.css
@@ -74,7 +74,7 @@
 }
 
 /*Vista horizontal mobile*/
-@media only screen and (min-device-width: 650px) {
+@media (min-width: 600px) and (max-width: 1199px) {
   .Logotext-login {
     margin-left: -0.5em;
     height: 4.5em;
