--- a/rapid-note/src/components/Register.css
+++ b/rapid-note/src/components/Register.css
@@ -1,17 +1,16 @@
-@media only screen and (min-width: 365px) {
+
   .App {
     text-align: center;
   }
   .Logotext-register {
-    width: 16em;
-    height: 31vmin;
-    margin-top: -1em;
-  }
-  .cat-register {
-    width: 4em;
+    width: 100%;
     height: 6em;
-    margin-left: 6em;
-    margin-top: -12vmin;
+    align-items: center;
+  }
+  img.cat-register {
+    width: 20%;
+    height: 9em;
+    margin-top: -1em;
   }
   .Content-register {
     background-color: #92daee;
@@ -33,7 +32,7 @@
   .Form-register {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     margin-left: 0.6em;
     margin-top: -5vmin;
@@ -61,7 +60,6 @@
   .Content-btn-register {
     background-color: #92daee;
     margin-top: 5vmin;
-    margin-left: 3.4em;
     width:8em ;
   }
   .btnRegister {
@@ -85,33 +83,35 @@
     margin-left: -0.2em;
     margin-top: 0.5em;
   }
-}
-/*For tablet horizontal*/
+
+/*For tablet*/
 @media (min-width: 600px) and (max-width: 1199px) {
   .Logotext-register {
-    margin-left: 0em;
-    height: 6em;
-    width: 29em;
+    height: 9em;
+    width: 100%;
+    margin-top: 2em;
+  }
+  img.cat-register {
+    width: 25%;
+    height: 14em;
     margin-top: -2em;
   }
   .Title-register {
     font-family: "Sanchez";
     font-size: 24px;
-    margin-top: 0vmin;
   }
   .Form-register {
+    height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    font-size: 24px;
-    align-items: flex-start;
-    margin-top: -4.5em;
-    margin-left: 4em;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0.5em;
   }
-
   label {
-  margin-left: -14em;
-  }
-
+    font-size: 24px;
+}
   input[type="email"],
   input[type="text"],
   input[type="password"] {
@@ -125,10 +125,10 @@
     text-decoration: none;
     margin: 15px 1px;
     cursor: pointer;
-    width: 50%;
-    height: 1.5em;
-    margin-left: 3em;
-    margin-top: -1.5em;
+    width: 90%;
+    height: 3em;
+    margin-left: 0em;
+    margin-top: 0em;
   }
 
   .cat-register {
@@ -140,7 +140,6 @@
 
   .Content-btn-register {
     margin-top: 0.5em;
-    margin-left: 2em;
   }
   button {
     height: 11vmin;
@@ -155,9 +154,9 @@
   }
   .Content-link-register {
     width: 7em;
-    margin-top: -2.3em;
+    margin-top: 0em;
     background-color: #92daee;
-    margin-left: 9.5em;
+
   }
   .Link-register {
     display: flex;
