--- a/rapid-note/src/components/Login.css
+++ b/rapid-note/src/components/Login.css
@@ -4,14 +4,14 @@
     width: 100%;
   }
   .Logotext-login {
-    width: 14em;
-    margin-left: 0.4em;
-    margin-top: 0em;
+    width: 100%;
+    height: 6em;
+    margin-top: -10em;
   }
   .Form-login {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     margin-left: 3vmin;
     margin-top: 1vmin;
@@ -36,18 +36,21 @@
     margin: 4vmin;
   }
   .Content-btn-google{
-    margin-left: 0.5em;
-    width: 0em;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    margin-left: 4em;
   }
   .LogoGoogle {
-    height: 1.8em;
-    width: 8.5em;
+    height: 2.2em;
+    width: 10em;
     margin-top: 0vmin;
     margin-left: 0vmin;
   }
   .BtnGoogle {
-    height: 2em;
-    width: 9em;
+    height: 2.3em;
+    width: 11em;
     font-family: "Sanchez";
     font-size: 24px;
     background-color: white;
@@ -61,16 +64,17 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    font-size: 24px;
-    color: black;
+    font-size: 28px;
+    color: blue;
     padding: 4vmin 0vmin 0vmin 0vmin;
+    margin-top: 1em;
   }
   p {
     display: block;
     color: red;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-top: 0.5em;
+    margin-block-start: 2em;
+    margin-block-end: 2em;
+    margin-top: 6em;
 }
 
 /*Vista horizontal mobile*/
